CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)


INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/Findsodium.cmake")
IF (NOT sodium_FOUND)
    MESSAGE (FATAL_ERROR "libsodium is required")
ENDIF ()
INCLUDE_DIRECTORIES(${sodium_INCLUDE_DIR})

pkg_check_modules(libbitcoin REQUIRED libbitcoin)
INCLUDE_DIRECTORIES(${libbitcoin_INCLUDE_DIRS})
LINK_DIRECTORIES(${libbitcoin_LIBDIR})

ADD_EXECUTABLE(segvan segvan.cpp)
TARGET_LINK_LIBRARIES(segvan ${sodium_LIBRARY_RELEASE})
TARGET_LINK_LIBRARIES(segvan ${libbitcoin_LIBRARIES})

